fixed horizontal scroll, and footers, working on responsiveness

--- a/Stylesheets/navStyle.css
+++ b/Stylesheets/navStyle.css
@@ -1,3 +1,6 @@
+nav {
+	position: static;
+}
 nav h1 {
 	margin: 0 auto;
 	padding: 0;
@@ -9,19 +12,18 @@ nav h1 {
 	font-size: 55px;
 }
 
-
 nav #logo img{
-	height: 225px;;
+	height: 200px;;
 	position: absolute;
 	top: 90px;
-	left: 20px;
+	left: 350px;
 	z-index: 12;
 }
 
 nav ul {
 	position: absolute;
-	top: 70px;
-	right: 400px;
+	top: 25px;
+	right: 20px;
 	padding: 0;
 	display: flex;
     z-index: 10;
@@ -82,7 +84,11 @@ nav ul li a {
 	left: 35px;
 }
 
-.navBoxes {
+section .container .CardContainer {
+	width: 100%;
+}
+
+#navBoxes {
 	margin: 150px;
 }
 
@@ -121,6 +127,11 @@ nav ul li a {
     z-index: 3;
 }
 
+#navBoxes2 {
+	margin: 150px;
+	height: 600px;
+}
+
 #darkBox2 {
 	background-color: #295728;
   	border: 1px solid #295728;
@@ -157,9 +168,9 @@ nav ul li a {
 }
 
 footer {
-	position: absolute;
-	top: 1500pxpx;
+	position: relative;
 	width: 100%;
+	bottom: 0px;
 }
 
 #socials {
@@ -170,22 +181,43 @@ footer {
 }
 
 @media (max-width:1054px ) {
-	nav ul {
+nav ul {
 	position: absolute;
 	right: 100px;
 }
 
-	nav #logo img{
+nav #logo img{
 	height: 200px;
 	top: 100px;
 	left: 100px;
 }
 
-	nav h1 {
+nav h1 {
 	top: 185px;
-	left: 400px;
-	width: 400px;
+	left: 350px;
+	width: 200px;
 	font-size: 45px;
+}
+
+#lightBox {
+    left: 5%;
+    top: 45px;
+    z-index: 3;
+}
+
+#darkBox2 {
+  	position: relative;
+    left: 0px;
+    bottom: 0px;
+}
+
+#mediumBox2 {
+    left: 127px;
+    bottom: 15px;
+}
+
+#lightBox2 {
+    top: 0;
 }
 
 #socials {
@@ -193,15 +225,58 @@ footer {
 	top: 90px;
 }
 
-.navBoxes {
-	width: 1054px;
-}
-
-#navBoxes2 {
-	width: 1054px;
+#navBoxes {
+	width: 1000px;
 }
 
 footer {
-	width: 1054px;
+	width: 100%;
+	overflow: contain;
 }
+}
+
+@media(max-width: 895px) {
+nav #logo img{
+	height: 120px;
+	left: 24px;
+	top: 150px;
+}
+
+#lightBox2 {
+   	top: 55px;
+   	left: 40px;
+}
+
+
+
+
+}
+
+@media (max-width:650px ) {
+nav h1 {
+	width: 100px;
+	left: 300px;
+}
+
+#lightBox {
+	left: 5%;
+	top: 45px;
+}
+
+#darkBox2 {
+	position: relative;
+	left: 0px;
+	bottom: 0px;
+}
+
+#mediumBox2 {
+	left: 75px;
+	bottom: 15px;
+}
+
+#lightBox2 {
+   	top: 60px;
+   	left: 25px;
+}
+
 }
