--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #1E281E;
-	width: 100%;
+	margin: 0;
 
 }
 
@@ -12,6 +12,7 @@ button {
 
 .container {
 	margin-top: 400px;
+	margin-left: 0 auto;
 }
 
 .frogName {
@@ -48,7 +49,7 @@ button {
 	object-fit: cover;
 }
 
-..imageContain {
+.imageContain {
 	height: 300px;
 }
 
@@ -75,10 +76,25 @@ button {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	max-width: 1200px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0 auto;
 }
 
-@media (max-width) {
+@media (max-width:1054px ) {
+.CardContainer {
+	grid-template-columns: repeat(2, 1fr);
+	margin-left: 50px;
+	margin-right: 50px;
+}
+	
+}
+
+
+@media (max-width:740px ) {
+.CardContainer {
+	grid-template-columns: repeat(1, 1fr);
+	margin-left: 100px;
+	margin-right: 100px;
+}
+}
 	
 }
